--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -5,3 +5,12 @@
 body {
   background-color: white;
 }
+
+#show-review {
+  width: 550px;
+  word-wrap: break-word;
+}
+
+#form-review {
+  width: 550px;
+}
