--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,7 +4,7 @@
   <div class="cards">
     <% @lists.each do |list| %>
       <%= link_to list_path(list) do %>
-        <div class="card-list" style="background-image: url('<%= list.photo_url %>'),  linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));">
+        <div class="card-list" style="background-image: url('<%= (cl_image_path list.photo.key, crop: :fill) %> '),  linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));">
           <%= list.name %>
         </div>
       <% end %>
